Add bomb dropping and 3X Spritesheets

--- a/WizardWarzRotW/WizardWarzRotW.csproj
+++ b/WizardWarzRotW/WizardWarzRotW.csproj
@@ -202,6 +202,15 @@
     <Resource Include="Resources\WizardWarzText3.png" />
     <Resource Include="Resources\WizardWarzText4.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\CharacterSheet_Left.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\CharacterSheet_Right.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Bomb Sheet.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
