Repush - accidentally added the non-edited version of the Main Track (Wizard_Warz_02), with a file size of 14mb. The mp3 is only about 2mb.

--- a/WizardWarzRotW/WizardWarzRotW.csproj
+++ b/WizardWarzRotW/WizardWarzRotW.csproj
@@ -212,10 +212,12 @@
     <Resource Include="Resources\Bomb Sheet.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Wizard_Warz_02.wav" />
+    <None Include="Resources\Wizard_Warz_00.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Wizard_Warz_00.wav">
+    <None Include="Resources\Wizard_Warz_02.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
