Just some changes to the Font for all pages (except game). Included the Font as a resource. Also connected results at the end.

--- a/WizardWarzRotW/WizardWarzRotW.csproj
+++ b/WizardWarzRotW/WizardWarzRotW.csproj
@@ -182,6 +182,7 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\ARCADECLASSIC.TTF" />
     <None Include="Resources\bomb_Explode.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
