--- a/WizardWarzRotW/WizardWarzRotW.csproj
+++ b/WizardWarzRotW/WizardWarzRotW.csproj
@@ -373,6 +373,9 @@
   <ItemGroup>
     <Resource Include="Resources\VerticalExplosion_Up.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\PlayerLeft2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
